// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFolderDialog should render create folder dialog 1`] = `
<ConfirmDialog
  actionButton="submit"
  autofocusButton={false}
  cancelButtonText="Отменить"
  closeButtonAriaLabel="Закрыть"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "select-folder-dialog",
      },
      "entityMixes": Array [
        "js-prevent-deselect",
      ],
      "entityMods": Object {
        "create-folder": true,
        "touch": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  noCloseButton={false}
  onCancel={[Function]}
  onClose={[Function]}
  onExtraButtonClick={[Function]}
  onSubmit={[Function]}
  submitButtonText="select-folder dialog (create folder) submit button text"
  submitDisabled={true}
  theme="normal"
  title={
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "title",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      select-folder dialog (create folder) title
    </div>
  }
  useMobilePane={false}
  visible={true}
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "select-folder-dialog",
          "elem": "content",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Connect(ReactNoscript)
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "tree",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      layoutName="react-tree"
      viewName="treeWrap"
    />
    <Connect(CreateFolderForm)
      createRef={[Function]}
      dialogName="selectFolder"
    />
  </div>
</ConfirmDialog>
`;

exports[`SelectFolderDialog should render dialog 1`] = `
<ConfirmDialog
  actionButton="submit"
  autofocusButton={false}
  cancelButtonText="Отменить"
  closeButtonAriaLabel="Закрыть"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "select-folder-dialog",
      },
      "entityMixes": Array [
        "js-prevent-deselect",
      ],
      "entityMods": Object {
        "create-folder": false,
        "touch": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  noCloseButton={false}
  onCancel={[Function]}
  onClose={[Function]}
  onExtraButtonClick={[Function]}
  onSubmit={[Function]}
  submitButtonText="select-folder dialog submit button text"
  submitDisabled={true}
  theme="normal"
  title={
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "title",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      select-folder dialog title
    </div>
  }
  useMobilePane={false}
  visible={true}
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "select-folder-dialog",
          "elem": "content",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Connect(ReactNoscript)
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "tree",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      layoutName="react-tree"
      viewName="treeWrap"
    />
  </div>
</ConfirmDialog>
`;

exports[`SelectFolderDialog should render dialog with warning 1`] = `
<ConfirmDialog
  actionButton="submit"
  autofocusButton={false}
  cancelButtonText="Отменить"
  closeButtonAriaLabel="Закрыть"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "select-folder-dialog",
      },
      "entityMixes": Array [
        "js-prevent-deselect",
      ],
      "entityMods": Object {
        "create-folder": false,
        "touch": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  noCloseButton={false}
  onCancel={[Function]}
  onClose={[Function]}
  onExtraButtonClick={[Function]}
  onSubmit={[Function]}
  submitButtonText="select-folder dialog submit button text"
  submitDisabled={true}
  theme="normal"
  title={
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "title",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      select-folder dialog title
    </div>
  }
  useMobilePane={false}
  visible={true}
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "select-folder-dialog",
          "elem": "content",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Connect(ReactNoscript)
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "tree",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      layoutName="react-tree"
      viewName="treeWrap"
    />
    <Component
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "select-folder-dialog",
            "elem": "warning",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      key="unlim"
      onClose={[Function]}
      size="m"
      view="default"
    >
      <MessageBoxTextWrap
        align="left"
        leading={
          <icon
            onClick={[Function]}
            role="none"
          />
        }
      >
        select-folder dialog warning text
      </MessageBoxTextWrap>
    </Component>
  </div>
</ConfirmDialog>
`;
